# semanticvideos

infra/: aca.bicep  main.bicep
infra/core/storage/: storage-account.bicep
src/: Dockerfile  pyproject.toml
src/quartapp/: chat.py  video_handler.py
src/quartapp/static/: styles.css
src/quartapp/templates/: index.html
